[gd_scene load_steps=14 format=3 uid="uid://cb8ow707de0gw"]

[ext_resource type="Script" path="res://Game.gd" id="1_638p3"]
[ext_resource type="PackedScene" uid="uid://qrh8dh10e05x" path="res://enemy.tscn" id="2_32mvh"]
[ext_resource type="PackedScene" uid="uid://0kwlij1c4o52" path="res://small_snake.tscn" id="3_dfbx4"]
[ext_resource type="PackedScene" uid="uid://bstfkg4l8iuxr" path="res://player.tscn" id="5_dgs28"]
[ext_resource type="AudioStream" uid="uid://tffbxu422y4f" path="res://Audio/ambient_horror.ogg" id="6_r5qae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emrqd"]
size = Vector2(17, 671)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_602qm"]
size = Vector2(1167, 2.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q2s0w"]
size = Vector2(1187.99, 83.8867)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ombbk"]
size = Vector2(8.5, 659.5)

[sub_resource type="Gradient" id="Gradient_jfwg3"]
offsets = PackedFloat32Array(0, 0.621118, 1)
colors = PackedColorArray(0.47933, 0.000296245, 0.520415, 1, 0.249596, 0.000118919, 0.268027, 0.792961, 0.0582419, 4.79653e-06, 0.0611425, 0.666667)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p1guf"]
gradient = SubResource("Gradient_jfwg3")
fill = 2
fill_from = Vector2(0.484444, 0.48)

[sub_resource type="Gradient" id="Gradient_tinod"]
colors = PackedColorArray(1, 1, 1, 1, 1, 0.752941, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yec45"]
gradient = SubResource("Gradient_tinod")
fill = 1
fill_from = Vector2(0.504386, 0.473684)

[node name="Game" type="Node2D"]
process_mode = 1
script = ExtResource("1_638p3")
snaks = ExtResource("2_32mvh")
smallSnake = ExtResource("3_dfbx4")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -7.0
offset_right = 5035.0
offset_bottom = 612.0
scale = Vector2(0.234382, 1.06818)

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(1.5, 316.5)
shape = SubResource("RectangleShape2D_emrqd")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-6, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(584.5, 653.75)
shape = SubResource("RectangleShape2D_602qm")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(-28, -8)
scale = Vector2(1.04895, 0.942614)
metadata/_edit_group_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(583.098, 30.7295)
scale = Vector2(0.925027, 0.961999)
shape = SubResource("RectangleShape2D_q2s0w")

[node name="Area2D" type="Area2D" parent="." groups=["wall"]]
position = Vector2(1190, 179)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-14.25, 144.25)
shape = SubResource("RectangleShape2D_ombbk")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 0.882353)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("5_dgs28")]

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Player"]
volume_db = -15.0
autoplay = true
max_distance = 5000.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_r5qae")
volume_db = -25.0
autoplay = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(548, 15)
scale = Vector2(20.28, 1.64)
texture = SubResource("GradientTexture2D_p1guf")

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[node name="Label2" type="Label" parent="GameTimer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -313.0
offset_right = 21.0
offset_bottom = -290.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.946666, 1.44)
size_flags_horizontal = 4
size_flags_vertical = 0
text = "****
"
horizontal_alignment = 1
metadata/_edit_group_ = true

[node name="PointLight2D" type="PointLight2D" parent="GameTimer/Label2"]
position = Vector2(31.6902, 11.8056)
scale = Vector2(1.13205, 0.416948)
texture = SubResource("GradientTexture2D_yec45")
metadata/_edit_group_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
